<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/miLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/win" />

    <TextView
        android:id="@+id/txtRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/resultado"
        android:textAllCaps="true"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtmsg"
        android:layout_width="256dp"
        android:layout_height="37dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:text="@string/msgResultado"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRes" />

    <TableLayout
        android:id="@+id/tabla"
        android:layout_width="250dp"
        android:layout_height="259dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtmsg">

        <TableRow
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="126dp"
                android:layout_height="wrap_content"
                android:text="@string/verde" />

            <EditText
                android:id="@+id/nVerde"
                android:layout_width="50dp"
                android:layout_height="48dp"
                android:autofillHints=""
                android:ems="10"
                android:gravity="center_horizontal|center_vertical"
                android:hint="0"
                android:inputType="number"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rojo" />

            <EditText
                android:id="@+id/nRojo"
                android:layout_width="50dp"
                android:layout_height="48dp"
                android:autofillHints=""
                android:ems="10"
                android:gravity="center_horizontal|center_vertical"
                android:hint="0"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amarillo" />

            <EditText
                android:id="@+id/nAmarillo"
                android:layout_width="50dp"
                android:layout_height="48dp"
                android:autofillHints=""
                android:ems="10"
                android:gravity="center_horizontal|center_vertical"
                android:hint="0"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/azul" />

            <EditText
                android:id="@+id/nAzul"
                android:layout_width="25dp"
                android:layout_height="48dp"
                android:autofillHints=""
                android:ems="10"
                android:gravity="center_horizontal|center_vertical"
                android:hint="0"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/magenta" />

            <EditText
                android:id="@+id/nMagenta"
                android:layout_width="80dp"
                android:layout_height="48dp"
                android:autofillHints=""
                android:ems="10"
                android:gravity="center_horizontal|center_vertical"
                android:hint="0"
                android:inputType="number" />

        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btComprobar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comprobar"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabla" />

    <TextView
        android:id="@+id/msgDerrota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/gold_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagen" />

</androidx.constraintlayout.widget.ConstraintLayout>